--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Music Recs</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="main.js"></script>
     </head>
     <body>
-        Welcome
+        <div id="container">
+            <div id="search">
+                <div>SEARCH</div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="recommendations">
+                <div>RECOMMENDATIONS</div>
+                <div></div>
+            </div>
+        </div>
     </body>
 </html>
