--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
         <div id="container">
             <div id="search">
                 <div>SEARCH</div>
-                <div></div>
-                <div></div>
+                <div>
+                    <input type="text" id="input">
+                </div>
+                <div>
+                    <ul id="searches"></ul>
+                </div>
             </div>
             <div id="recommendations">
                 <div>RECOMMENDATIONS</div>
-                <div></div>
+                <div>
+                    <ul id="tracks"></ul>
+                </div>
             </div>
         </div>
     </body>
